@@ -591,6 +591,9 @@ dnl 	AC_MSG_NOTICE([using $MATH_LIBS])
 dnl fi
 dnl COMMON_LIBS=MATH_LIBS
 
+# Current shared library version number for libcob
+LIBCOB_VER=5
+
 if test "x$LIBCOB_LIBS" != "x"; then
 	LIBCOB_LIBS="$LIBCOB_LIBS $COMMON_LIBS"
 else
@@ -2481,6 +2484,7 @@ AC_DEFINE_UNQUOTED([COB_SHARED_OPT],	["$COB_SHARED_OPT"])
 AC_DEFINE_UNQUOTED([COB_MODULE_EXT],	["$COB_MODULE_EXT"])
 AC_DEFINE_UNQUOTED([COB_OBJECT_EXT],	["$OBJEXT"])
 AC_DEFINE_UNQUOTED([COB_EXE_EXT],		["$COB_EXE_EXT"])
+AC_DEFINE_UNQUOTED([COB_LIBCOB_VER],	[$LIBCOB_VER],	[libcob version])
 AX_AC_DEFINE_RESOLVED([COB_LIBRARY_PATH],	[$COB_LIBRARY_PATH], 	[default search path for extra modules])
 if test "x$striplib" != "x"; then
 	AC_DEFINE_UNQUOTED([COB_STRIP_CMD], ["$striplib"])
@@ -2524,6 +2528,7 @@ AC_SUBST([COBC_CPPFLAGS])
 AC_SUBST([PROGRAMS_LIBS])
 AC_SUBST([LIBCOB_LIBS])
 AC_SUBST([LIBCOB_CPPFLAGS])
+AC_SUBST([LIBCOB_VER])
 AC_SUBST([CISAM_LIBS])
 AC_SUBST([DISAM_LIBS])
 AC_SUBST([VBISAM_LIBS])
