@@ -1,4 +1,8 @@
 
+2022-04-12  Ron Norman <rjn@inglenet.com>
+	* Makefile.am : Add LIBCOB_VER for --version-info instead of hard coded
+	* common.c: Removed checks for running in development mode for relocation
+
 2022-04-04  Simon Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am (AM_CPPFLAGS): removed LOCALEDIR, now back in config.h
@@ -6,10 +10,6 @@
 	* common.c (cob_relocate_string, cob_find_path, cob_setup_env): handle
 	  different compilers, win32 paths and binaries
 	* common.c: handle memory issues with long paths
-
-2022-03-30  Ron Norman <rjn@inglenet.com>
-
-	* common.c (relocate_strings) : add 'libcob' directory for -I
 
 2022-03-29  Ron Norman <rjn@inglenet.com>
 
